--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ Assets/Firebase/Plugins/x86_64/FirebaseCppApp-8_8_0.so
 # Crashlytics generated file
 crashlytics-build.properties
 
+# For Mac
+.DS_Store
+
